--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-
+openai==1.61.1
+python-dotenv==1.0.1
+langchain-openai==0.3.3
+langchain==0.3.17
+langchain-google-genai==2.0.5
+httpx==0.28.1
+fastapi[standard]
