--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,14 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+#Files Remove
+*.pdf
+*.json
+*.doc
+*.docx
+*.txt
+*.xlsx
+*.csv
+
+!requirements.txt
