--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ langchain-openai==0.3.3
 langchain==0.3.17
 langchain-google-genai==2.0.5
 httpx==0.28.1
+pillow==11.1.0
+PyMuPDF==1.25.3
+python-docx==1.1.2
+pytesseract==0.3.13
 fastapi[standard]
